--- a/tex/inledning.tex
+++ b/tex/inledning.tex
@@ -4,7 +4,7 @@
 \newgeometry{bottom=3cm,top=3cm}
 \vfill
 \vspace*{4cm}
-\centerline{\includegraphics[width=\paperwidth]{logo/rubrikbild}}
+\noindent\centerline{\includegraphics[width=\paperwidth]{logo/rubrikbild}}
 \begin{flushright}
 	\Huge{\bfseries{\TitleText}} \\[3mm]
 	\Large{\bfseries{\SubtitleText}}\\[3mm]
