--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -93,15 +93,14 @@ Skillnaden i de båda måtten kan räknas om enligt följande:
 \section{S-värden, signalvärde, S-meter}
 
 Signalstyrkan i amatörradio uttrycks oftast som S-värden. Dessa fås i regel
-genom nivån på AGC hos mottagaren. Därför ser man sälla utslag vid riktigt
+genom nivån på AGC hos mottagaren. Därför ser man sällan utslag vid riktigt
 låga signaler.
 
-Standard kalibrering för S-metern är enligt skalan i tabellen. Som syns
-kalibreras tabellen olika för om man är under 30\,MHz (kortvåg och lägre
-frekvenser) och skillnaden är 20\,dB med högre känslighet över 30\,MHz dvs VHF
-och uppåt.
+Standard kalibrering för S-metern är enligt skalan i tabellen
+\ref{tab:s-varden}. Som syns kalibreras tabellen olika för om man är under
+30\,MHz (kortvåg och lägre frekvenser) och skillnaden är 20\,dB med högre
+känslighet över 30\,MHz dvs VHF och uppåt.
 
-\ref{tab:s-varden}
 
 \begin{table}[ht]
 \centering
