--- a/rhb.tex
+++ b/rhb.tex
@@ -56,7 +56,7 @@ a4paper, twoside]{book}                % De viktigaste inställningarna för dok
 \setlist{nosep}                        % Separera inte numrerade och punktlistor mer
 \usepackage{todonotes}                 % Kunna lägga in att-göra i dokumentet
 \renewcommand{\arraystretch}{1.15}     % Sätt ett mer lämpligt avstånd
-%\headheight=20pt                       % Justera dokumentets huvud
+\headheight=15pt                       % Justera dokumentets huvud
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% DOKUMENT
