--- a/tex/inledning.tex
+++ b/tex/inledning.tex
@@ -1,10 +1,12 @@
 %%% Förstasidan
 \pagestyle{empty}
 \input{tex/init-morse}
-\newgeometry{bottom=3cm,top=3cm}
+%\newgeometry{bottom=3cm,top=3cm}
 \vfill
 \vspace*{4cm}
-\noindent\centerline{\includegraphics[width=\paperwidth]{logo/rubrikbild}}
+
+\includegraphics[width=\paperwidth]{logo/rubrikbild}
+
 \begin{flushright}
 	\Huge{\bfseries{\TitleText}} \\[3mm]
 	\Large{\bfseries{\SubtitleText}}\\[3mm]
