Fixade till försättsbilden

--- a/tex/inledning.tex
+++ b/tex/inledning.tex
@@ -1,11 +1,11 @@
 %%% Förstasidan
 \pagestyle{empty}
 \input{tex/init-morse}
-%\newgeometry{bottom=3cm,top=3cm}
+\newgeometry{bottom=25mm,top=25mm, bindingoffset=0mm}
 \vfill
 \vspace*{4cm}
 
-\includegraphics[width=\paperwidth]{logo/rubrikbild}
+\hspace{-30.5mm}\includegraphics[width=\paperwidth]{logo/rubrikbild}
 
 \begin{flushright}
 	\Huge{\bfseries{\TitleText}} \\[3mm]
