--- a/rhb.tex
+++ b/rhb.tex
@@ -10,7 +10,7 @@
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SM5UEI}
 \newcommand{\Epostadress}{anders@sikvall.se}
-\newcommand{\DokVersion}{1:a utgåvan} 					% Utgåva i fortsättningen
+\newcommand{\DokVersion}{11:e utgåvan} 					% Utgåva i fortsättningen
 \newcommand{\DokYear}{2025}
 \newcommand{\DokumentDatum}{\today}
 \newcommand{\ISBN}{978-91-531-4763-3}
@@ -56,7 +56,7 @@ a4paper, twoside]{book}                % De viktigaste inställningarna för dok
 \setlist{nosep}                        % Separera inte numrerade och punktlistor mer
 \usepackage{todonotes}                 % Kunna lägga in att-göra i dokumentet
 \renewcommand{\arraystretch}{1.15}     % Sätt ett mer lämpligt avstånd
-\headheight=15pt                       % Justera dokumentets huvud
+%\headheight=15pt                       % Justera dokumentets huvud
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% DOKUMENT
