--- a/tex/inledning.tex
+++ b/tex/inledning.tex
@@ -22,29 +22,23 @@
 
 \vspace*{\fill}
 
-\noindent {\bf \TitleText}
+\small
 
-\noindent \SubtitleText
-
-\vspace{1 em}
-
-\noindent \DokVersion
-
-\noindent ISBN: \ISBN
-
-\vspace{1 em}
-
-\noindent \Forfattare, \Initialer
-
-\noindent \Epostadress
-
-\noindent \Linkhome
-
-\noindent Karlholmsbruk
-
-\vspace{1 em}
-
-\noindent Datum \DokumentDatum
+\begin{tabular}{l}
+	{\bf \TitleText}                  \\
+	\noindent \SubtitleText           \\
+	                                  \\
+	\noindent \DokVersion             \\
+	\noindent ISBN: \ISBN             \\
+	                                  \\
+	\noindent \Forfattare, \Initialer \\
+	\noindent \Epostadress            \\
+	\noindent \Linkhome               \\
+	\noindent Karlholmsbruk           \\
+	                                  \\
+	\noindent Datum: \DokumentDatum
+\end{tabular}
+\normalsize
 
 \clearpage
 
