--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -781,16 +781,19 @@ viktig att kontrollera att man fortfarande följer bandplanerna i den region
 man är.
 
 \begin{itemize}
-\item I 6\,m bandet finns inga FM-kanaler definierade under 51\,MHz. \item För
-2\,m-bandet är FM-kanaler endast definierade från 145\,MHz och uppåt. \item I
-70\,cm-bandet är inga kanaler definierade i intervallet 432.000--433.000\,MHz.
-Observera att startfrekvensen är utanför 70\,cm bandplanen i IARU region 1.
+\item I 6\,m bandet finns inga FM-kanaler definierade under 51\,MHz.
+\item För 2\,m-bandet är FM-kanaler endast definierade från 145\,MHz och
+uppåt.
+\item I 70\,cm-bandet är inga kanaler definierade i intervallet
+432.000--433.000\,MHz.
+\item Observera att startfrekvensen är utanför 70\,cm
+bandplanen i IARU region 1.
 \end{itemize}
 
 \textit{OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas tacksamt
 mot. Maila mig på anders@sikvall.se om du har korrekt information.}
 
-\subsection{Införande av 12,5\,kHz kanalavstånd}
+\subsection{Införande av 12,5 kHz kanalavstånd}
 
 För ett antal år sedan beslutade man sig att gå mot ett smalare kanalraster på
 VHF och UHF och införde härmed kanalavstånd på 12,5~kHz i bandplanerna.
@@ -888,8 +891,9 @@ simplexkanalerna hade inte så stor spridning i Sverige men förekom
 rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller
 aktivitetscenter som det numera kallas).
 
+\clearpage
 
-\subsection{FM-kanaler 70\,cm-bandet}
+\subsection{FM-kanaler 70 cm-bandet}
 
 \small
 
@@ -1738,20 +1742,20 @@ G &       &       &       &        & 16 546 & 18 843 & 22 177 & 25 118 \\
 
 Alla frekvenser i kHz, bandbredder i Hz.
 
-\subsection{Bandplan 2.2\,km, 135,7--137,8\,kHz}
+\subsection{Bandplan 2.2 km, 135,7--137,8 kHz}
 
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 135,7 & 135,8 & 200 & CQ, QRSS, Digi & OBS! Högsta effekt 1W ERP. \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 600\,m, 472--479\,kHz}
+\subsection{Bandplan 600 m, 472--479 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 472 & 479 & 200 & CW, QRSS, Digi & OBS! Högsta utstrålad effekt 1W EIRP \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 160\,m, 1810--2000\,kHz}
+\subsection{Bandplan 160 m, 1810--2000 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 1810 & 1838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
@@ -1762,7 +1766,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 1950 & 2000 & 2700 & Alla moder & OBS! Max 10 W till ant.                             \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 80\,m, 3500--3800\,kHz}
+\subsection{Bandplan 80 m, 3500--3800 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 3500 & 3510 & 200  & CW             & Exklusivt CW                         \\
@@ -1782,7 +1786,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \end{tabular}
 
 
-\subsection{Bandplan 60\,m, 5351\,5--5366,5\,kHz}
+\subsection{Bandplan 60 m, 5351,5--5366,5 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 5351\,5 & 5354\,0 &  200 & CW, Digimoder      & OBS! Högsta utstrålad effekt 15 W EIRP\\
@@ -1792,7 +1796,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &                    & max 20 Hz bandbredd\\ \hline
 \end{tabular}
 
-\subsection{Bandplan 40\,m, 7000--7200\,kHz}
+\subsection{Bandplan 40 m, 7000--7200 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 7000 & 7040 & 200  & CW         & Exklusivt CW.                             \\
@@ -1807,7 +1811,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 7175 & 7200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 30\,m, 10\,100--10\,150 kHz}
+\subsection{Bandplan 30 m, 10 100--10 150 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 10\,100 & 10\,140 & 200 & CW       & CW exkl. Max 150 Watt på 30 m           \\
@@ -1815,7 +1819,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 10\,140 & 10\,150 & 500 & Smalband & Digimoder PSK 10142,150\,kHz. Ej Packet \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 20\,m, 14\,000--14\,350 kHz}
+\subsection{Bandplan 20\,m, 14 000--14 350 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 14\,000 & 14\,070 & 200  & CW         & Exklusivt CW                             \\
@@ -1831,7 +1835,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekvens 14 300                \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 17 m, 18\,068--18\,168 kHz}
+\subsection{Bandplan 17 m, 18 068--18 168 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -1844,7 +1848,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 18\,160              \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 15\,m, 21\,000--21\,450 kHz}
+\subsection{Bandplan 15 m, 21 000--21 450 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -1858,7 +1862,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 21\,360                            \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 12\,m, 24\,890--24\,990 kHz}
+\subsection{Bandplan 12 m, 24 890--24 990 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 24\,890 & 24\,915 & 200  & CW         & Exklusivt CW, QRP 24\,906                             \\ \hline
@@ -1869,7 +1873,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \end{tabular}
 
 \small
-\subsection{Bandplan 10\,m, 28\,000-29\,700 kHz}
+\subsection{Bandplan 10 m, 28 000-29 700 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 28\,000 & 28\,070 & 200  & CW         & Exklusivt CW, QRS 28\,055, CW QRP 28\,060              \\ \hline
@@ -1898,44 +1902,43 @@ Alla frekvenser i kHz, bandbredder i Hz.
 
 \begin{landscape}
 \section{Amatörradiofyrar}
-\subsection{Svenska fyrar VHF/UHF}
+\subsection{Svenska fyrar VHF/UHF/SHF}
 \begin{longtable}{rlllrlrrl}
-	          \bf Dist & \bf Signal & \bf Mod  & \bf Ort                & \bf Frekvens & \bf Lokator & \bf MASL & \bf MAGL & \bf Riktning \\ \hline
+	          \bf Dist & \bf Signal & \bf Mod & \bf Ort                & \bf Frekvens & \bf Lokator & \bf MASL & \bf MAGL & \bf Riktning \\ \hline
 	\endhead
-	       0 & SKØCT/B    & CW       & Stockholm              &    5760.9030 & JO99JX      &       60 &       30 & Omni         \\
-	                 0 & SKØCT/B    & CW       & Stockholm              &   10368.8400 & JO89XJ      &       50 &       20 & Omni         \\
-	                 0 & SKØEN/B    & CW       & Väddö                  &   10368.8470 & JO99JX      &       60 &       30 & 360°         \\
-	                 0 & SKØEN/B    & CW       & Väddö                  &    1296.8350 & JO99JX      &       70 &       40 & Omni         \\
-	                 1 & SK1UHF     & CW       & Klintehamn             &     432.4050 & JO97CJ      &       65 &       60 & Omni         \\
-	                 1 & SK1VHF     & CW       & Klintehamn             &     144.4470 & JO97CJ      &       65 &       60 & Omni         \\
-	                 1 & SK1UHG     & CW       & Klintehamn             &    1296.9500 & JO97CJ      &       65 &       60 & Omni         \\
-	                 2 & SK2VHF     & CW       & Vindeln/Buberget       &     144.4570 & JP94TF      &      300 &       10 & N+SV         \\
-	                 2 & SK2SHF     & CW       & Vännäs                 &    1296.9850 & JP93VU      &      250 &       50 &              \\
-	                   &            &          & Granlundsb.            &              &             &          &          &              \\
-	                 3 & SM3KDR     & CW       & Krokom/Aspås           &      28.2860 & JP73GI      &      380 &        5 & E-W          \\
-	                 3 & SK3UHF     & CW       & Nordingrå              &     432.4550 & JP92FW      &      200 &        8 & Omni         \\
-	                 3 & SK3UHG     & CW       & Nordingrå              &    1296.8550 & JP92FW      &      200 &       10 & Omni         \\
-	                 3 & SK3SIX     & CW       & Östersund              &      50.4680 & JP73HC      &      480 &        7 & Omni         \\
-	                 4 & SK4MPI     & PI4 - CW & Borlänge               &     144.4120 & JP70PI      &      380 &       20 & NV+NO        \\
-	                 4 & SK4BX/B    & CW       & Garphyttan/Storstensh. &     432.4600 & JO79LH      &      270 &       10 & N E S W      \\
-	                 4 & SK4BX/B    & CW       & Garphyttan/Ånnaboda    &   10368.9600 & JO79LI      &      270 &       10 &              \\
-	                 4 & SK4BX/B    & CW       & Garphyttan/Ånnaboda    &    1296.9600 & JO79LI      &      270 &       10 &              \\
-	                 6 & SK6YH/B    & CW       & Göteborg               &   10368.8080 & JO57XQ      &      135 &       40 & 184°         \\
-	                 6 & SK6MHI     & CW       & Göteborg               &    5760.8000 & JO57XQ      &      135 &       40 & Omni         \\
-	                 6 & SK6MHI     & CW       & Göteborg               &   24048.8000 & JO57XQ      &      135 &       40 & Omni         \\
-	                 6 & SK6MHI     & CW       & Göteborg               &   10368.8000 & JO57XQ      &      135 &       40 & Omni         \\
-	                 6 & SK6MHI     & CW       & Hönö                   &    1296.8000 & JO57TQ      &       40 &       30 & Omni         \\
-	                 6 & SK6WW/B    & CW       & Karlsborg/Vaberget     &   10368.8350 & JO78FM      &      240 &       20 & Omni         \\
-	                 6 & SK6EI/B    & CW       & Skövde                 &      50.4600 & JO68VJ      &      300 &       30 & South        \\
-	                 6 & SK6SHG     & CW       & Tjörn Island           &   24048.8830 & JO57TX      &      118 &        8 & N / S        \\
-	                 6 & SK6UHI     & CW       & Tjörn Island           &    1296.8050 & JO57TX      &      128 &       18 & Omni         \\
-	                 6 & SK6VHF     & CW       & Tjörn Island           &     144.4060 & JO57TX      &      122 &       12 & Omni         \\
-	                 6 & SK6UHF     & CW       & Varberg/Veddige        &     432.4120 & JO67EH      &      175 &       25 & Omni         \\
-	                 7 & SM7DTE/B   & CW       & Gärsnäs                &    5760.8410 & JO75DN      &       86 &        8 & Omni         \\
-	                 7 & SM7DTE/B   & CW       & Gärsnäs                &   10368.8410 & JO75DN      &       86 &        8 & Omni         \\
-	                 7 & SM7DTE/B   & CW       & Gärsnäs                &   24048.8430 & JO75DN      &       86 &        8 & Omni         \\
-	                 7 & SK7VHF     & CW       & Sjöbo                  &     144.4610 & JO65UQ      &       25 &       25 & Omni         \\
-	                 7 & SK7GH/B    & CW       & Värnamo                &      28.2980 & JO77BF      &      230 &       10 & Omni
+	                 0 & SKØCT/B    & CW      & Stockholm              &    5760.9030 & JO99JX      &       60 &       30 & Omni         \\
+	                 0 & SKØCT/B    & CW      & Stockholm              &   10368.8400 & JO89XJ      &       50 &       20 & Omni         \\
+	                 0 & SKØEN/B    & CW      & Väddö                  &   10368.8470 & JO99JX      &       60 &       30 & 360°         \\
+	                 0 & SKØEN/B    & CW      & Väddö                  &    1296.8350 & JO99JX      &       70 &       40 & Omni         \\
+	                 1 & SK1UHF     & CW      & Klintehamn             &     432.4050 & JO97CJ      &       65 &       60 & Omni         \\
+	                 1 & SK1VHF     & CW      & Klintehamn             &     144.4470 & JO97CJ      &       65 &       60 & Omni         \\
+	                 1 & SK1UHG     & CW      & Klintehamn             &    1296.9500 & JO97CJ      &       65 &       60 & Omni         \\
+	                 2 & SK2VHF     & CW      & Vindeln/Buberget       &     144.4570 & JP94TF      &      300 &       10 & N+SV         \\
+	                 2 & SK2SHF     & CW      & Vännäs/Granlundsberget &    1296.9850 & JP93VU      &      250 &       50 &              \\
+	                 3 & SM3KDR     & CW      & Krokom/Aspås           &      28.2860 & JP73GI      &      380 &        5 & E-W          \\
+	                 3 & SK3UHF     & CW      & Nordingrå              &     432.4550 & JP92FW      &      200 &        8 & Omni         \\
+	                 3 & SK3UHG     & CW      & Nordingrå              &    1296.8550 & JP92FW      &      200 &       10 & Omni         \\
+	                 3 & SK3SIX     & CW      & Östersund              &      50.4680 & JP73HC      &      480 &        7 & Omni         \\
+	                 4 & SK4MPI     & PI4-CW  & Borlänge               &     144.4120 & JP70PI      &      380 &       20 & NV+NO        \\
+	                 4 & SK4BX/B    & CW      & Garphyttan/Storstensh. &     432.4600 & JO79LH      &      270 &       10 & N E S W      \\
+	                 4 & SK4BX/B    & CW      & Garphyttan/Ånnaboda    &   10368.9600 & JO79LI      &      270 &       10 &              \\
+	                 4 & SK4BX/B    & CW      & Garphyttan/Ånnaboda    &    1296.9600 & JO79LI      &      270 &       10 &              \\
+	                 6 & SK6YH/B    & CW      & Göteborg               &   10368.8080 & JO57XQ      &      135 &       40 & 184°         \\
+	                 6 & SK6MHI     & CW      & Göteborg               &    5760.8000 & JO57XQ      &      135 &       40 & Omni         \\
+	                 6 & SK6MHI     & CW      & Göteborg               &   24048.8000 & JO57XQ      &      135 &       40 & Omni         \\
+	                 6 & SK6MHI     & CW      & Göteborg               &   10368.8000 & JO57XQ      &      135 &       40 & Omni         \\
+	                 6 & SK6MHI     & CW      & Hönö                   &    1296.8000 & JO57TQ      &       40 &       30 & Omni         \\
+	                 6 & SK6WW/B    & CW      & Karlsborg/Vaberget     &   10368.8350 & JO78FM      &      240 &       20 & Omni         \\
+	                 6 & SK6EI/B    & CW      & Skövde                 &      50.4600 & JO68VJ      &      300 &       30 & South        \\
+	                 6 & SK6SHG     & CW      & Tjörn Island           &   24048.8830 & JO57TX      &      118 &        8 & N / S        \\
+	                 6 & SK6UHI     & CW      & Tjörn Island           &    1296.8050 & JO57TX      &      128 &       18 & Omni         \\
+	                 6 & SK6VHF     & CW      & Tjörn Island           &     144.4060 & JO57TX      &      122 &       12 & Omni         \\
+	                 6 & SK6UHF     & CW      & Varberg/Veddige        &     432.4120 & JO67EH      &      175 &       25 & Omni         \\
+	                 7 & SM7DTE/B   & CW      & Gärsnäs                &    5760.8410 & JO75DN      &       86 &        8 & Omni         \\
+	                 7 & SM7DTE/B   & CW      & Gärsnäs                &   10368.8410 & JO75DN      &       86 &        8 & Omni         \\
+	                 7 & SM7DTE/B   & CW      & Gärsnäs                &   24048.8430 & JO75DN      &       86 &        8 & Omni         \\
+	                 7 & SK7VHF     & CW      & Sjöbo                  &     144.4610 & JO65UQ      &       25 &       25 & Omni         \\
+	                 7 & SK7GH/B    & CW      & Värnamo                &      28.2980 & JO77BF      &      230 &       10 & Omni
 \end{longtable}
 \end{landscape}
 
