--- a/rhb.tex
+++ b/rhb.tex
@@ -15,6 +15,7 @@
 \newcommand{\DokumentDatum}{\today}
 \newcommand{\ISBN}{978-91-531-4763-3}
 \newcommand{\Linkhome}{www.sikvall.se}
+\newcommand{\Licens}{CC BY-NC-SA 4.0}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt, swedish,
 a4paper, twoside]{book}                % De viktigaste inställningarna för dokumentet
