--- a/tex/inledning.tex
+++ b/tex/inledning.tex
@@ -25,18 +25,19 @@
 \small
 
 \begin{tabular}{l}
-	{\bf \TitleText}                  \\
-	\noindent \SubtitleText           \\
-	                                  \\
-	\noindent \DokVersion             \\
-	\noindent ISBN: \ISBN             \\
-	                                  \\
-	\noindent \Forfattare, \Initialer \\
-	\noindent \Epostadress            \\
-	\noindent \Linkhome               \\
-	\noindent Karlholmsbruk           \\
-	                                  \\
-	\noindent Datum: \DokumentDatum
+	{\bf \TitleText}        \\
+	\SubtitleText           \\
+	                        \\
+	\DokVersion             \\
+	ISBN: \ISBN             \\
+	                        \\
+	\Forfattare, \Initialer \\
+	\Epostadress            \\
+	\Linkhome               \\
+	Karlholmsbruk           \\
+	                        \\
+	Datum:\DokumentDatum    \\
+	Licens: \Licens
 \end{tabular}
 \normalsize
 
