--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -265,6 +265,8 @@ distriktsiffran kan ändra sig.
 \caption{Internationella bokstaveringsalfabetet (ITU-alfabetet)}
 \end{table}
 
+\clearpage
+
 \subsection{Q-koder}
 I tabellen listas några av de vanligast förekommande Q-koderna på amatörradiobanden.
 Det finns förstås många fler koder men detta anses som de vanligaste.
@@ -564,7 +566,7 @@ generationer inom det militära för signalister.
 	Zäta    & \MZata    &                       &                \\
 	Åke     & \MAke     &                       &                \\
 	Ärlig   & \MArlig   &                       &                \\
-	Östen   & \MOsten   & 
+	Östen   & \MOsten   &
 \end{tabular}
 \normalsize
 \caption{Svenska morsealfabetet.}
