Minskat bilden lite för att se om det hjälper mot en överfull hbox

--- a/tex/inledning.tex
+++ b/tex/inledning.tex
@@ -5,7 +5,7 @@
 \vfill
 \vspace*{4cm}
 
-\hspace{-30.5mm}\includegraphics[width=\paperwidth]{logo/rubrikbild}
+\hspace{-30mm}\includegraphics[width=0.99\paperwidth]{logo/rubrikbild}
 
 \begin{flushright}
 	\Huge{\bfseries{\TitleText}} \\[3mm]
