Fixade ett fel i en rubrik

--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1819,7 +1819,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 10\,140 & 10\,150 & 500 & Smalband & Digimoder PSK 10142,150\,kHz. Ej Packet \\ \hline
 \end{tabular}
 
-\subsection{Bandplan 20\,m, 14 000--14 350 kHz}
+\subsection{Bandplan 20 m, 14 000--14 350 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 14\,000 & 14\,070 & 200  & CW         & Exklusivt CW                             \\
