Fixade till källan för morsekoden

--- a/tex/init-morse.tex
+++ b/tex/init-morse.tex
@@ -1,4 +1,10 @@
-%%% Makron för typsättning av morse
+% Makron för typsättning av morse
+% Täpp-Anders Sikvall
+%
+% https://github.com/sikvall/latex-morse
+%
+%
+
 \newcommand{\Mdotlength}{3pt}
 \newcommand{\Mdahlength}{9pt}
 \newcommand{\Mcharseplength}{9pt}
