--- a/tex/inledning.tex
+++ b/tex/inledning.tex
@@ -5,7 +5,7 @@
 \vfill
 \vspace*{4cm}
 
-\hspace{-30mm}\includegraphics[width=0.99\paperwidth]{logo/rubrikbild}
+\hspace{-30.2mm}\includegraphics[width=\paperwidth]{logo/rubrikbild}
 
 \begin{flushright}
 	\Huge{\bfseries{\TitleText}} \\[3mm]
