--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -7,8 +7,8 @@ Här hittar du frekvenslistor för ett stort gäng olika radioanvändare från
 Marin VHF och MF/HF till kanaler för jakt och kortdistansradio,
 amatörradiobandplaner, amatörradiofyrar, med mera.
 
-Uppdelningen är gjort mellan så kallade "allmänna frekvenser" som inte kräver
-certifikat eller andra tillstånd samt "amatörradio" som kräver
+Uppdelningen är gjort mellan så kallade ''allmänna frekvenser'' som inte kräver
+certifikat eller andra tillstånd samt ''amatörradio'' som kräver
 amatörradiolicens. Vissa frekvenser listas dock trots de kräver tillstånd som
 exempel marin VHF och MF/HF då dessa kan tänkas ses som av stort
 allmänintresse.
@@ -2009,7 +2009,7 @@ Sändningar under denna tid förekommer från ocertifierade scouter som lånar
 klubbsignal, har en tillfällig signal, eller liknande. Ibland lånar
 enskilda sändaramatörer ut sina signaler och det finns också ganska många
 scouter som har eget amatörradiocertifikat. Många gånger är det också så
-kallade tillfälliga "event-signaler" som är i luften.
+kallade tillfälliga ''event-signaler'' som är i luften.
 
 Sändningarna sker dock alltid ske under direkt överinseende av en radioamatör
 men var beredd på att det kommer vara en viss ovana och ske en del misstag.
