--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -75,12 +75,12 @@ Detta gäller exempelvis en vertikalt monterad dipol eller kvartsvågsantenn på
 ett jordplan.
 
 Antennvinsten kan jämföras med en vanlig dipol och då använder man begreppet
-dBd där den sista bokstaven står för "jämfört med en dipolantenn". I
+dBd där den sista bokstaven står för ''jämfört med en dipolantenn''. I
 professionella radiosammanhang använder man dock en tänkt teoretisk antenn som
 strålar exakt likadant i alla riktningar, inte bara i planet utan även uppåt
 och nedåt. En sådan antenn finns egentligen bara i teorin men gör det möjligt
 att skapa ett referensmått för just riktverkan, denna teoretiska antenn kallas
-för "isotrop antenn" och då använder man beteckningen dBi där i på slutet står
+för ''isotrop antenn'' och då använder man beteckningen dBi där i på slutet står
 för just isotrop antenn.
 
 Skillnaden i de båda måtten kan räknas om enligt följande:
@@ -365,8 +365,6 @@ kortvågen där man kan få riktigt bra långväga förbindelser. Sådant kallas
 ''sporadiskt E'' när det uppträder och det kan vara några timmar eller kortare
 stunder.
 
-\todo{Mer om sporadiskt E}
-
 \subsection{Troposfärutbredning}
 \index{tropo}
 \index{atmosfärisk utbredning}
@@ -576,13 +574,13 @@ alternativ, inte minst som appar till telefoner och surfplattor.
 
 För maximal överföring av radioenergi från en sändare till en antenn eller
 från antennen till en mottagare krävs att man har en bra anpassning mellan de
-olika delarna. Dessa brukar vara tre saker som behöver "matchas" med varandra
+olika delarna. Dessa brukar vara tre saker som behöver ''matchas'' med varandra
 så att man har en snarlik impedans hos alla tre.
 
 Dessa är radioapparaten, transmissionsledningen och antennen. I de flesta fall
 är radioapparaten en sändtagare som kan växla mellan sändning och mottagning.
 Transmissionsledningen är vanligtvis någon form av koaxialkabel som har en så
-kallad "karaktäristisk impedans" som i dessa sammanhang vanligtvis är
+kallad ''karaktäristisk impedans'' som i dessa sammanhang vanligtvis är
 50\,$\Omega$.
 
 \subsection{Stående våg}
@@ -596,7 +594,7 @@ man betecknar dessa som ett bråktal, vanligen som 1:1,2.
 
 \subsection{Return loss}
 
-Man kan även uttrycka den i så kallad "return loss" eller RL. Detta begrepp
+Man kan även uttrycka den i så kallad ''return loss'' eller RL. Detta begrepp
 talar i stället om hur många decibel lägre den på grund av missanpassningen
 reflekterade signalen är i förhållande till den framåtgående och utrycks i
 decibel, vanligen som 20\,dB\,RL. Just denna siffra betyder att den
