--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -202,8 +202,8 @@ Sverige delas in i följande distrikt efter sina län:
 
 Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer byter
 inte distriktsiffra under resa i annat distrikt, i stället används suffix
-(tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI
-mobilt i SM3-land" (SM0UEI/3/M) ibland (SM0UEI/3M) för att påvisa att man
+(tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man ''SM0UEI
+mobilt i SM3-land'' (SM0UEI/3/M) ibland (SM0UEI/3M) för att påvisa att man
 befinner sig utanför ordinarie distrikt.
 
 En radioamatör kan byta sin distriktsiffra om den sänder från ett annat distrikt
@@ -454,8 +454,8 @@ pile-up. Ligger du och sänder i ett frekvensområde som är särskilt
 ägnat för DX är det smart att lägga Rx-frekvensen strax utanför. Det
 undviker att man stökar ned i DX-bandet.
 
-Kör du split skall du säga det efter varje sändning. "CQ CQ CQ de Sierra Mike
-Zero Uniform Echo India listening 5 up" exempelvis. På CW bör en split vara
+Kör du split skall du säga det efter varje sändning. ''CQ CQ CQ de Sierra Mike
+Zero Uniform Echo India listening 5 up'' exempelvis. På CW bör en split vara
 minst 2 kHz och på SSB bör den vara minst 5 kHz ännu hellre 10 kHz. Tänk på att
 när du startar din split måste du kolla så att båda frekvenserna är ok. Låt inte
 din pile-up sprida ut sig för mycket även om det är kanske enklare för dig så är
