--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -57,7 +57,7 @@ amatörradiocertifikat.
 
 I sverige regleras all radioanvändning med sändare som inte kräver att man
 söker tillstånd för det i en skrift som ges ut av Post- och Telestyrelsen
-(PTS) och som bär namnet "Untandag från tillståndsplikt". Denna skrift
+(PTS) och som bär namnet {\bf 'undantag från tillståndsplikt''}. Denna skrift
 uppdateras lite då och då när det finns behov av det och här regleras all
 radiotrafik som inte kräver särskilt tillstånd.
 
